[package]
name = "wascc-logging"
version = "0.8.0"
authors = ["Kevin Hoffman <alothien@gmail.com>"]
edition = "2018"
homepage = "https://wascc.dev"
repository = "https://github.com/wascc/logging-provider"
description = "Structured logging capability provider for the waSCC host runtime"
license = "Apache-2.0"
documentation = "https://docs.rs/wascc-logging"
readme = "README.md"
keywords = ["webassembly", "wasm", "wasi", "wascc", "logging"]
categories = ["wasm", "api-bindings"]

[badges]
maintenance = { status = "actively-developed" }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
static_plugin = [] # Enable to statically compile this into a host

[dependencies]
wascc-codec = "0.9.0"
log = "0.4.8"
env_logger = "0.7.1"
rmp-serde = "0.14.4"
serde = {version = "1.0.117", features = ["derive"]}